# desktop-tutorial

./: README.md  export_web.json  export_web.py  function_scanner.py  functions_list.json  mkdocs.yml  project_exporter.py  pyproject.toml  report.txt  requirements.txt  rosdep.yaml
cam_slicer/: __init__.py  api_server.py  cli.py  cli_batch.py  cli_diagnostics.py  cli_machine_manager.py  cli_plugin_manager.py  cli_ros_bridge.py  cli_wizard.py  digital_twin.py  gcode_stats.py  heightmap.py  logging_config.py  performance.py  plugin_manager.py  plugin_marketplace.py  probing.py  ros_bridge.py  ros_test_node.py  ros_transform_adapter.py  shapes.py  task_server.py  tool_database.py  tool_material_db.py  toolpath_simulator.py  user_manager.py  vision_bridge.py  workflow_manager.py  workspace_scanner.py
docs/: index.md  reference.md
logs/: log.txt
scripts/: vision_to_cnc.py
tests/: conftest.py  test_active_geofence.py  test_analyzers.py  test_api_server.py  test_base_optimizer.py  test_batch_processor.py  test_camera_config.py  test_camera_router.py  test_chip_coolant.py  test_cli_diagnostics.py  test_cli_plugin_manager.py  test_cli_ros_bridge.py  test_cli_wizard.py  test_collision_alerts.py  test_core_functions.py  test_custom_strategy.py  test_debris.py  test_digital_twin.py  test_engine.py  test_export_web.py  test_feature_machining.py  test_feedback_advisor.py  test_feedback_streamer_extra.py  test_fillet_detection.py  test_force_prediction.py  test_function_scanner.py  test_gcode_stats.py  test_geofence.py  test_head_selector.py  test_heightmap.py  test_hsm.py  (+57 more)
(+214 files in other folders)
